# Tiny-WASM-Compiler

./: .clang-tidy  .clangd  .gitignore  .gitmodules  .prettierignore  CMakeLists.txt  LICENSE  Readme.md  cspell.json  design.md  package-lock.json  package.json
.github/: copilot-instructions.md
.github/gitSetup/: setLocalGitConfig.txt
.github/helper/: debugRef.json
.github/workflows/: check.yml  ds-review.yml  pr.yml  test.yml
chapters/Chapter00/start_arm64/: sum_fibo.s
chapters/Chapter00/start_wasm/: fibonacci.wat  sum.wasm  sum.wat
chapters/Chapter01/: CMakeLists.txt  demo.cpp
chapters/Chapter01/src/: byteCodeReader.cpp  byteCodeReader.hpp  compiler.cpp  compiler.hpp  emit.hpp  main.cpp  parse.cpp  parse.hpp  wasm_type.hpp
chapters/Chapter01/src/backend/: emit.hpp
chapters/Chapter01/src/common/: util.hpp
chapters/Chapter01/src/frontend/: byteCodeReader.hpp
chapters/Chapter02/: local.json
chapters/Chapter03/: arithmetic.json
demo/: CMakeLists.txt  demo.cpp
doc/: abi.md  design.md  runtimeLayout.md
src/: CMakeLists.txt  compiler.cpp  compiler.hpp  runtime.cpp  runtime.hpp
src/Chapter00/start_arm64/: CMakeLists.txt  func.h  help.txt  main.c  main.cpp  sum_fibo.s  testFibo.c
src/Chapter00/start_wasm/: fibonacci.wasm  module.js
src/backend/: aarch64Assembler.cpp  aarch64Assembler.hpp  aarch64_cc.hpp  aarch64_encoding.hpp  aarch64_ins.cpp  arm64Backend.cpp  arm64Backend.hpp  emit.cpp  emit.hpp  localManager.cpp  localManager.hpp  relpatch.cpp  relpatch.hpp
src/common/: ExecutableMemory.cpp  ExecutableMemory.hpp  ModuleInfo.cpp  ModuleInfo.hpp  StackElement.hpp  constant.hpp  frame.hpp  logger.hpp  operand_stack.hpp  stack.cpp  stack.hpp  storage.hpp  util.hpp  wasm_type.hpp
src/frontend/: byteCodeReader.cpp  byteCodeReader.hpp  frontend.cpp  frontend.hpp  localManager.cpp  localManager.hpp  operandManager.cpp  operandManager.hpp  runtimeBlock.hpp
test/: CMakeLists.txt  local.wasm  local.wat  spectest.cpp  spectest.hpp
tests/: CMakeLists.txt  common.cpp  common.hpp  json2testcase.cpp  json2testcase.hpp  spectest.cpp
tests/testcases/: block.wast  div.wast  opt_i32.wast  opt_i64.wast  opt_nop.wast
tests/testcases/importPrintf/: main.wasm  main.wat  myPrint.c
tools/cspell/: project-words.txt
